--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "karma start",
         "build": "sh client_build.sh && webpack --config config/webpack.prod.js --progress --profile --bail",
         "move_deps": "cp src/assets/*.* ../../web/assets",
-        "postinstall": "yarn run build"
+        "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
+        "heroku-postbuild": "echo This runs afterwards."
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
