--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "test": "karma start",
         "build": "sh client_build.sh && webpack --config config/webpack.prod.js --progress --profile --bail",
         "move_deps": "cp src/assets/*.* ../../web/assets",
-        "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
-        "heroku-postbuild": "echo This runs afterwards."
+        "heroku-prebuild": "echo This runs before Heroku installs your dependencies. && sh client_build.sh",
+        "heroku-postbuild": "echo This runs afterwards. && yarn run build"
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
