--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "version": "1.0.0",
     "description": "A webpack starter for Angular",
     "scripts": {
-        "start": "webpack-dev-server --host 0.0.0.0 --inline --progress --port 7777",
+        "start": "node server.js",
+        "start-dev-env": "webpack-dev-server --host 0.0.0.0 --inline --progress --port 7777",
         "test": "karma start",
         "build": "webpack --config config/webpack.prod.js --progress --profile --bail",
         "move_deps": "cp src/assets/*.* ../../web/assets",
-        "heroku-prebuild": "echo This runs before Heroku installs your dependencies. && sh client_build.sh",
-        "heroku-postbuild": "echo This runs afterwards. && yarn run build"
+        // "heroku-prebuild": "echo This runs before Heroku installs your dependencies. && sh client_build.sh",
+        // // "heroku-postbuild": "echo This runs afterwards. && yarn run build",
+        "webpack": "webpack",
+        "webpack-dev-server": "webpack-dev-server"
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
@@ -28,6 +31,7 @@
         "bootstrap": "^3.3.7",
         "core-js": "2.4.1",
         "crypto-js": "^3.1.9-1",
+        "express": "^4.16.2",
         "google-libphonenumber": "^3.0.0",
         "jquery": "^3.2.1",
         "libphonenumber-js": "^0.4.23",
