try1 for building the app in heroku

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "description": "A webpack starter for Angular",
     "scripts": {
         "start": "node server.js",
-        "start-dev-env": "webpack-dev-server --host 0.0.0.0 --inline --progress --port 7777",
+        "start-dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --port 7777",
         "test": "karma start",
         "build": "webpack --config config/webpack.prod.js --progress --profile --bail",
-        "move_deps": "cp src/assets/*.* ../../web/assets",
         "webpack": "webpack",
-        "webpack-dev-server": "webpack-dev-server"
+        "webpack-dev-server": "webpack-dev-server",
+        "heroku-prebuild":"yarn run build"
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
