--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "webpack --config config/webpack.prod.js --progress --profile --bail",
         "webpack": "webpack",
         "webpack-dev-server": "webpack-dev-server",
-        "heroku-prebuild":"yarn run build"
+        "heroku-prebuild":"npm run build"
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
