--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "webpack --config config/webpack.prod.js --progress --profile --bail",
         "webpack": "webpack",
         "webpack-dev-server": "webpack-dev-server",
-        "heroku-prebuild":"sh client_build.sh && npm run build"
+        "postinstall": "npm run build"
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
@@ -43,7 +43,10 @@
         "stompjs": "^2.3.3",
         "ts-md5": "^1.2.0",
         "typescript": "2.1.1",
-        "zone.js": "0.6.26"
+        "zone.js": "0.6.26",
+        "webpack": "1.14.0",
+        "webpack-dev-server": "1.16.2",
+        "webpack-merge": "0.14.1"
     },
     "devDependencies": {
         "@types/core-js": "0.9.35",
@@ -68,9 +71,6 @@
         "rimraf": "2.5.4",
         "style-loader": "0.13.1",
         "typescript": "2.0.10",
-        "url-loader": "^0.5.8",
-        "webpack": "1.14.0",
-        "webpack-dev-server": "1.16.2",
-        "webpack-merge": "0.14.1"
+        "url-loader": "^0.5.8"
     }
 }
