--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
         "zone.js": "0.6.26",
         "webpack": "1.14.0",
         "webpack-dev-server": "1.16.2",
-        "webpack-merge": "0.14.1"
+        "webpack-merge": "0.14.1",
+        "extract-text-webpack-plugin": "1.0.1",
+        "html-webpack-plugin": "2.24.1"
     },
     "devDependencies": {
         "@types/core-js": "0.9.35",
@@ -55,10 +57,8 @@
         "angular2-template-loader": "0.4.0",
         "awesome-typescript-loader": "2.2.4",
         "css-loader": "0.23.1",
-        "extract-text-webpack-plugin": "1.0.1",
         "file-loader": "0.8.5",
         "html-loader": "0.4.4",
-        "html-webpack-plugin": "2.24.1",
         "jasmine-core": "2.5.2",
         "karma": "1.3.0",
         "karma-jasmine": "1.1.0",
