--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
         "webpack-dev-server": "1.16.2",
         "webpack-merge": "0.14.1",
         "extract-text-webpack-plugin": "1.0.1",
-        "html-webpack-plugin": "2.24.1"
+        "html-webpack-plugin": "2.24.1",
+        "awesome-typescript-loader": "2.2.4"
     },
     "devDependencies": {
         "@types/core-js": "0.9.35",
         "@types/jasmine": "2.5.38",
         "@types/node": "6.0.52",
         "angular2-template-loader": "0.4.0",
-        "awesome-typescript-loader": "2.2.4",
         "css-loader": "0.23.1",
         "file-loader": "0.8.5",
         "html-loader": "0.4.4",
