--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
         "html-webpack-plugin": "2.24.1",
         "awesome-typescript-loader": "2.2.4",
         "angular2-template-loader": "0.4.0",
-        "style-loader": "0.13.1"
+        "style-loader": "0.13.1",
+        "css-loader": "0.23.1",
+        "file-loader": "0.8.5",
+        "html-loader": "0.4.4"
     },
     "devDependencies": {
         "@types/core-js": "0.9.35",
         "@types/jasmine": "2.5.38",
         "@types/node": "6.0.52",
-        "css-loader": "0.23.1",
-        "file-loader": "0.8.5",
-        "html-loader": "0.4.4",
         "jasmine-core": "2.5.2",
         "karma": "1.3.0",
         "karma-jasmine": "1.1.0",
