--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
         "style-loader": "0.13.1",
         "css-loader": "0.23.1",
         "file-loader": "0.8.5",
-        "html-loader": "0.4.4"
-    },
-    "devDependencies": {
+        "html-loader": "0.4.4",
         "@types/core-js": "0.9.35",
         "@types/jasmine": "2.5.38",
         "@types/node": "6.0.52",
