try1 for building the app in heroku

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "node server.js",
         "start-dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --port 7777",
         "test": "karma start",
-        "build": "webpack --config config/webpack.prod.js --progress --profile --bail",
+        "build": "webpack --config config/webpack.prod.js --progress --profile",
         "webpack": "webpack",
         "webpack-dev-server": "webpack-dev-server",
         "postinstall": "npm run build"
