--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "start": "node server.js",
         "start-dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --port 7777",
         "build": "webpack --config config/webpack.prod.js --progress --profile",
-        "postinstall": "npm run build",
-        "heroku-postbuild" : "node server.js"
+        "postinstall": "npm run build"
     },
     "dependencies": {
         "@angular/animations": "^4.4.6",
